# cookiecutter-clibones

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  DEV-README.md  LICENSE.txt  README.md  REUSE.toml  Taskfile-hatch.yml  Taskfile-poetry.yml  Taskfile.yaml  Taskfile.yml  config.toml  mkdocs.yml  pre_build.py  pyproject.toml  pytest.ini  shell.nix  tox.ini
{{cookiecutter.project_slug}}/.reuse/: dep5
{{cookiecutter.project_slug}}/docs/: DEV-README.md
{{cookiecutter.project_slug}}/scripts/: fail_on_regex_match.sh  gen_ref_pages.py  mk_module_init_py.py  swap_build_system.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  application_settings.py  graceful_interrupt_handler.py  info_control.py  logger_control.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/clibones/: __init__.py  application_settings.py  config_file.py  graceful_interrupt_handler.py  info_control.py  json_config_file.py  logger_control.py  toml_config_file.py
{{cookiecutter.project_slug}}/taskfiles/: front-end-vars.yaml  hatch.yaml  poetry.yaml  setuptools.yaml
{{cookiecutter.project_slug}}/tests/: config_1.toml  config_2.toml  config_3.toml  config_4.toml  test_config_file.py  test_info_control.py  test_main.py  test_version.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  application_settings.py  info_control.py  logger_control.py
